--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -93,6 +93,7 @@
         'Creating APIs and databases',
         'Designing and creating responsive frontends',
         'Scripting with PowerShell',
+        'Creating report layouts with Microsoft Reporting Services',
         'Supporting clients and managing projects', 'Producing Wordpress and Shopify sites']" [techStack]="{
         Frontend: 'React',
         Backend: 'Node.JS and Loopback',
