--- a/src/app/pages/cv-page/cv-page.component.html
+++ b/src/app/pages/cv-page/cv-page.component.html
@@ -17,15 +17,16 @@
 <div class="container" *ngIf="SelectedPage===1">
     <section class="center">
         <h1>Brooklyn Pedley</h1>
-        <p>82 Beechfield, Hoddesdon, Hertfordshire, EN11 9QJ<br>
+        <p>8 Sandpiper Court, John Dyde Close, Bishop’s Stortford, CM23 3BN, UK<br>
             brooklynpedley@gmail.com T: 07860224836
         </p>
         <h2>www.brooklynpedley.co.uk</h2>
-        <p>I am a hard-working individual who has experience in several areas of software programming
-            including front-end
-            web-app development. Having studied at degree level and now working within a professional development team,
-            I am
-            passionate about pursuing a career in developing software applications.
+        <p>
+            I am a full stack web developer with a wealth of skills across multiple technologies. 
+            With almost 4  years of industry experience I know how to take ownership of projects across their full life cycle.
+            From  requirements analysis to developing the entire stack of an app,
+            all the way to ensuring it is properly hosted and supported. 
+            I am now looking for my next big step.
         </p>
     </section>
     <section>
@@ -44,31 +45,38 @@
             </p>
             <ul>
                 <li>
-                    Creating front-ends using React
+                    Performing business and requirement analysis with clients to design apps that perfectly suit their needs.
                 </li>
                 <li>
-                    Creating back-ends using Express and Loopback
+                    Creating responsive front-ends using React with a focus on usability on both mobile and desktop platforms.
                 </li>
                 <li>
-                    Creating databases using T-SQL and writing procedures etc.
+                    Creating databases in Microsoft SQL Server. Writing procedures and functions in T-SQL, 
+                    designing efficient views and tables by making use of indexing tools. Managing user security and SQL server agent jobs.
                 </li>
                 <li>
-                    Creating ASP.NET apps
+                    Creating APIs using Express.JS and Loopback 3 and 4. Allowing SSO authentication on these APIs through the use of Passport.JS.
                 </li>
                 <li>
-                    Writing utility scripts with PowerShell
+                    Creating full stack web apps using VB.NET. Using Infragistics to handle tables with millions of rows.
                 </li>
                 <li>
-                    Managing relationships with clients
+                    Integrating with many top third party APIs such as Microsoft Graph, Xero, Plaid and more. Deep understand of the Oauth flow and how to implement it correctly.
                 </li>
                 <li>
-                    Managing Microsoft Azure
+                    Writing utility scripts with PowerShell to run data feeds on servers.
                 </li>
                 <li>
-                    Managing web hosting using IIS and Certify The Web
+                    Managing relationships with clients to support them in their use of apps, and discuss future improvements.
                 </li>
                 <li>
-                    Creating WordPress and Shopify sites
+                    Using Microsoft Azure to manage active directory and app registrations.
+                </li>
+                <li>
+                    Managing private web hosting using IIS and Certify The Web on VPSs.
+                </li>
+                <li>
+                    Creating WordPress and Shopify sites.
                 </li>
             </ul>
         </section>
@@ -81,28 +89,28 @@
             </p>
             <ul>
                 <li>
-                    Creating front-ends with Angular
+                    Creating front-ends with Angular.
                 </li>
                 <li>
-                    Creating Mobile apps using Ionic Cordova
+                    Creating mobile apps using Ionic.
                 </li>
                 <li>
-                    Creating Desktop apps using Electron
+                    Creating desktop apps using Electron.
                 </li>
                 <li>
-                    Managing web hosting using AWS
+                    Managing web hosting using AWS.
                 </li>
                 <li>
-                    Creating WordPress websites
+                    Creating WordPress websites.
                 </li>
                 <li>
-                    Designing front-ends with Adobe XD
+                    Designing front-ends with Adobe XD.
                 </li>
                 <li>
-                    Supporting clients on-site and on the phone
+                    Supporting clients on-site and on the phone.
                 </li>
                 <li>
-                    Working as a networking technician when needed
+                    Working as a networking technician when needed.
                 </li>
             </ul>
         </section>
@@ -111,14 +119,61 @@
 <div class="container" *ngIf="SelectedPage===2">
     <section>
         <h2>
+            Side Projects
+        </h2>
+        <p>
+            I love working on side projects in my free time to further hone my skills.
+        </p>
+        <section>
+            <h3>
+                $BAT Discord Bot
+            </h3>
+            <p>
+                A chat bot using Discord's API and Node.JS which displays information and up to date price feeds 
+                as well as replies to commands with messages on a Discord Server with 15,000+ users.
+            </p>
+        </section>
+        <section>
+            <h3>
+                Alien Worlds timer Extension
+            </h3>
+            <p>
+                A chrome extension that interacts with a WAX Blockchain RPC node to get chain information about a user's last transaction in the dApp Alien Worlds. 
+                This timer let users know when they last played the game, and therefore when they can play again, as well as some stats. 
+                This extension was used by 2000+ users with an average of 4.3* on the Chrome Web Store
+            </p>
+        </section>
+        <section>
+            <h3>
+                Gold Medal Winner in robotics at the NEC world skills show - November 2016
+            </h3>
+            <p>
+                Programmer chosen by my school team to undertake a 48hr competition 
+                in which I had to create an autonomous robot capable of detecting RFID tags on objects scattered around a ring 
+                and then moving them to their correct pit. 
+                I quickly learnt the programming language C and proved I could build a working program within strict time constraints. 
+                I take great pride in winning the gold medal in this competition and beating university teams as a sixth form student.
+            </p>
+        </section>
+    </section>
+    <section>
+        <h2>
             Education
         </h2>
+        <section>
+            <h3>
+                Certification in Business Analysis Fundamentals, Jan 3, 2022
+            </h3>
+            <p>
+                Completed a Udemy course on the subject.
+            </p>
+        </section>
         <section>
             <h3>
                 Certification in foundation user experience, Feb 2020
             </h3>
             <p>
-                Accredited BSC certification in UI and UX following a training course
+                Accredited BSC certification in UI and UX following a training course.
             </p>
         </section>
         <section>
@@ -126,19 +181,9 @@
                 BSc Computer Games Programming, University of Gloucestershire, Cheltenham, Sept 2017-April 2019
             </h3>
             <p>
-                I completed 1 year of this course with an average of 70% on my assignments. This degree has modules
-                which
-                teaches
-                in-depth use of game engines such as Unity and Unreal 4 with C# as-well as producing games using C++ and
-                OpenGl,
-                and
-                desktop applications such as image loaders and editors using .NET. The Course promotes industry
-                standards like
-                use
-                of perforce version control as well as a heavy emphasis on team-based projects such as a 3D racer that
-                was
-                created
-                in Unity alongside designers.
+                I completed 1 year of this course with an average grade of 70%. 
+                This degree teaches in-depth use of game engines such as Unity and Unreal 4 with C# as-well as producing games using C++ and OpenGl, 
+                and desktop applications such as image loaders and editors using .NET.
             </p>
         </section>
         <section>
@@ -150,65 +195,21 @@
                 12 GCSEs A*-C including Maths(A*), Computing(A), Physics(A)
             </p>
         </section>
-    </section>
-    <section>
-        <h2>
-            Awards
-        </h2>
         <section>
             <h3>
-                Gold award in robotics at the NEC world skills show – November 2016
+                A level Computing Coursework, 2016
             </h3>
             <p>
-                Sole programmer as part of a team chosen by my school to undertake a 48hr competition in which I had to
-                create
-                an
-                autonomous robot capable of detecting RFID tags on objects scattered around a ring and then moving them
-                to
-                their
-                correct pit. I quickly learnt the programming language C and proved I could build a working program in
-                stressful
-                conditions. I take great pride in winning the gold medal in this competition and beating university
-                teams as
-                a
-                sixth form student.
+                Developed a room booking system for a new school that used python3, 
+                an SQLite database and a UI developed using Tkinter. 
+                The app allowed teachers and students to see what rooms were being used and book rooms accordingly over a server-client based database.
             </p>
         </section>
         <section>
             <h3>
-                Bronze Senior Mathematical Challenge – UK mathematics trust – November 2016
+                Bronze Senior Mathematical Challenge - UK mathematics trust - November 2016
             </h3>
         </section>
-    </section>
-    <section>
-        <h2>
-            Addtional Experiences
-        </h2>
-        <section>
-            <p>
-                A level Computing Coursework, 2017 – Developed a room booking system for a new school that used python
-                3, an
-                SQLite database and a UI developed using Tkinter. The app allowed teachers and students to see what
-                rooms were
-                being used and book rooms accordingly over a server-client based database.
-            </p>
-        </section>
-        <section>
-            <p>
-                Work Shadowing at the Hertfordshire Police HQ, July 2015 – Spent 2 weeks with the IT team as well as the
-                in-house programming team. Repairing computer systems, handling the computer networks, and studying how
-                the
-                force develops its own software applications for use in the police environment.
-            </p>
-        </section>
-    </section>
-    <section>
-        <h2>
-            Other Work Experience
-        </h2>
-        <p>
-            Various experience during studies at Sainsbury’s 2016-2019, Steven Austin 2018 and Mcdonald’s 2015-2016
-        </p>
     </section>
 </div>
 <footer class="center">
