--- a/src/app/pages/single-project-page/single-project-page.component.scss
+++ b/src/app/pages/single-project-page/single-project-page.component.scss
@@ -1,7 +1,16 @@
 img{
-    width: 100%;
-    height: auto;
+    width: auto;
+    max-height: 365px;
+    max-width: 800px;
     border: solid 1px #4AF626;
+}
+
+figure{
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 }
 
 ul{
@@ -14,7 +23,7 @@ ul.includeBullets li:before{
 }
 
 article{
-    width: 50%;
+    width: 800px;
     margin: 16px auto;
 }
 
@@ -22,6 +31,7 @@ article{
     display: flex;
     justify-content: center;
     align-items: center;
+    height:35px;
 
     button{
         border: none;
